force-app/main/default/src/objects/PJN_All_Care_Plan_Setting__mdt/PJN_All_Care_Plan_Setting__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: All Care Plans tab
Purpose: Define information to be displayed on the All Care Plans tab.
Metadata Relationship(s): Program, All Care Plan Setting Fields
Created by Mavens: Yes</description>
    <label>All Care Plan Setting</label>
    <pluralLabel>All Care Plan Settings</pluralLabel>
</CustomObject>