force-app/main/default/src/objects/PJN_All_Care_Plan_Setting__mdt/fields/PJN_Is_Path_Expandable__c.field-meta.xml
<CustomField>
    <fullName>PJN_Is_Path_Expandable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Path Expandable</label>
    <type>Checkbox</type>
</CustomField>