force-app/main/default/src/objects/PJN_All_Care_Plan_Setting__mdt/fields/PJN_Program__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program__c</fullName>
    <label>Program</label>
    <referenceTo>PJN_Program__mdt</referenceTo>
    <relationshipLabel>All Care Plan Settings</relationshipLabel>
    <relationshipName>PJN_All_Care_Plan_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>