force-app/main/default/src/objects/PJN_All_Care_Plan_Setting__mdt/fields/PJN_Subtitle_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Subtitle_Field_API_Name__c</fullName>
    <label>Subtitle Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>